--- a/wcivf/apps/people/templates/people/email_person.html
+++ b/wcivf/apps/people/templates/people/email_person.html
@@ -28,8 +28,16 @@
                 {% include "people/_person_email_form.html" %}
             {% else %}
                 <p>
-                    {% blocktrans trimmed with person_name=object.name edit_profile_url=object.get_ynr_url %}
-                        We don't know {{ person_name }}'s email address.
+                    {% if object.name_endswith_s %}
+                        {% blocktrans trimmed with person_name=object.name %}
+                            We don't know {{ person_name }}' email address.
+                        {% endblocktrans %}
+                    {% else %}
+                        {% blocktrans trimmed with person_name=object.name %}
+                            We don't know {{ person_name }}'s email address.
+                        {% endblocktrans %}
+                    {% endif %}
+                    {% blocktrans trimmed with edit_profile_url=object.get_ynr_url %}
                         <a href="{{ edit_profile_url }}">Can you add it?</a>
                     {% endblocktrans %}
                 </p>
