--- a/wcivf/apps/people/templates/people/person_detail.html
+++ b/wcivf/apps/people/templates/people/person_detail.html
@@ -50,7 +50,13 @@
             {% include "people/includes/_person_about_card.html" %}
         {% endif %}
 
-        {% comment %} {% include "people/includes/_person_local_party_card.html" with party=person.local_party.name %} {% endcomment %}
+        {% if object.current_or_future_candidacies and object.local_party %}
+            {% include "people/includes/_person_local_party_card.html" with person=object.featured_candidacy.person party=object.featured_candidacy.party.name %}
+        {% endif %}
+
+        {% if object.current_or_future_candidacies and object.national_party %}
+            {% include "people/includes/_person_national_party_card.html" with person=object.featured_candidacy.person party=object.national_party.name %}
+        {% endif %}
 
         {% include "people/includes/_person_hustings_card.html" %}
 
