--- a/wcivf/apps/people/templates/people/person_detail.html
+++ b/wcivf/apps/people/templates/people/person_detail.html
@@ -42,7 +42,9 @@
 
         {% include "people/includes/_person_policy_card.html" %}
 
-        {% include "people/includes/_person_manifesto_card.html" with party=object.featured_candidacy.party party_name=object.featured_candidacy.party.name %}
+        {% if object.current_or_future_candidacies %}
+            {% include "people/includes/_person_manifesto_card.html" with party=object.featured_candidacy.party party_name=object.featured_candidacy.party.name %}
+        {% endif %}
 
         {% include "people/includes/_person_contact_card.html" %}
 
@@ -51,7 +53,7 @@
         {% endif %}
 
         {% if object.current_or_future_candidacies and object.local_party %}
-            {% include "people/includes/_person_local_party_card.html" with person=object.featured_candidacy.person party=object.featured_candidacy.party.name %}
+            {% include "people/includes/_person_local_party_card.html" with person=object.featured_candidacy.person party=object.local_party.name %}
         {% endif %}
 
         {% if object.current_or_future_candidacies and object.national_party %}
