link changes/udate to standing page

--- a/wcivf/templates/standing.html
+++ b/wcivf/templates/standing.html
@@ -9,13 +9,13 @@
 
 [WhoCanIVoteFor.co.uk](https://whocanivotefor.co.uk/) aims to have an up to date profile for every candidate standing in a UK election. These profiles have become a useful tool in helping millions of voters across the country decide who to vote for.
 
-WhoCanIVoteFor.co.uk is powered by data from Democracy Club’s public database of election candidates, built with help from many volunteers. [Democracy Club](https://democracyclub.org.uk/about/) is a non-partisan and not-for-profit Community Interest Company whose vision is of a country with the digital foundations to support everyone’s participation in democratic life.
+WhoCanIVoteFor.co.uk is powered by data from Democracy Club’s [public database of election candidates](https://candidates.democracyclub.org.uk/), built with help from many volunteers. [Democracy Club](https://democracyclub.org.uk/about/) is a non-partisan and not-for-profit Community Interest Company whose vision is of a country with the digital foundations to support everyone’s participation in democratic life.
 
 Democracy Club’s candidates database is an open portal where users can update profiles with sourced information. We encourage candidates, agents and parties to add information such as photos, statements to voters and social media links - and more importantly, a candidate’s favourite biscuit.
 
 ### How do I create or update my profile?
 
-To update your profile, you need to head over to our [Candidates Website](https://candidates.democracyclub.org.uk/) and create an account. This will allow you to add information to your profile. You may already have a candidate profile (thanks to our trusty volunteers!) so please [search your name](https://candidates.democracyclub.org.uk/search) before attempting to create a new one.
+To update your profile, you need to head over to our Candidates Website and [create an account](https://candidates.democracyclub.org.uk/accounts/login/). This will allow you to add information to your profile. You may already have a candidate profile (thanks to our trusty volunteers!) so please [search your name](https://candidates.democracyclub.org.uk/search) before attempting to create a new one. For more information abour edit the database, please read our [volunteering page](https://candidates.democracyclub.org.uk/volunteer/).
 
 ### Want to add more than one candidate? The more the merrier!
 
