--- a/wcivf/apps/elections/templates/elections/includes/parl_boundary_changes.html
+++ b/wcivf/apps/elections/templates/elections/includes/parl_boundary_changes.html
@@ -2,39 +2,56 @@
     <div class="ds-card-body">
         {% if parl_boundary_changes.CHANGE_TYPE ==  "BOUNDARY_CHANGE" %}
             <h2 class="ds-h4">Your constituency is changing</h2>
-            <p>At the last parliamentary election, your constituency was
-                <em>{{ parl_boundary_changes.current_constituencies_name }}</em>.
-                <p>At the next general election on the 4th of July, your new constituency
-                    have the same name, but the boundary will change.
-                </p>
+            <p>Your constituency,
+                <em>{{ parl_boundary_changes.current_constituencies_name }}</em>, has changed shape since the last
+                parliamentary election.
+            </p>
+            <p>
+                A new set of constituencies will be used for the 2024 UK general election. This is happening to take
+                account of changes in population. Learn more about these changes on the
+                <a href="https://www.parliament.uk/about/how/elections-and-voting/constituencies/">UK Parliament
+                    website</a>.
+            </p>
         {% endif %}
         {% if parl_boundary_changes.CHANGE_TYPE ==  "NAME_CHANGE_BOUNDARY_CHANGE" %}
-            <h2 class="ds-h4">Your constituency is changing</h2>
-            <p>At the last parliamentary election, your constituency was
+            <h2 class="ds-h4">You have a new constituency</h2>
+            <p>At the last parliamentary election your constituency was
                 <em>{{ parl_boundary_changes.current_constituencies_name }}</em>.
-                <p>At the next general election on the 4th of July, constituency boundary will change and
-                    the new name will be <em>{{ parl_boundary_changes.new_constituencies_name }}</em>.
-                </p>
+                On 4 July, your constituency will be <em>{{ parl_boundary_changes.new_constituencies_name }}</em>
+            </p>
+            <p>
+                A new set of constituencies will be used for the 2024 UK general election. This is happening to take
+                account of changes in population. Learn more about these changes on the
+                <a href="https://www.parliament.uk/about/how/elections-and-voting/constituencies/">UK Parliament
+                    website</a>.
+            </p>
         {% endif %}
         {% if parl_boundary_changes.CHANGE_TYPE ==  "NAME_CHANGE" %}
-            <h2 class="ds-h4">Your constituency name is changing</h2>
-            <p>At the last parliamentary election, your constituency was called
+            <h2 class="ds-h4">Your constituency has changed name</h2>
+            <p>
+                At the last parliamentary election your constituency was
                 <em>{{ parl_boundary_changes.current_constituencies_name }}</em>.
-                <p>At the next general election on the 4th of July, constituency boundary will remain the
-                    same, but the new name will be
-                    <em>{{ parl_boundary_changes.new_constituencies_name }}</em>.
-                </p>
+                It has been renamed <em>{{ parl_boundary_changes.new_constituencies_name }}</em>. This does not affect
+                the boundaries.
+            </p>
+            <p>
+                A new set of constituencies will be used for the 2024 UK general election. This is happening to take
+                account of changes in population, but not all constituencies are affected. Learn more about these
+                changes on the <a href="https://www.parliament.uk/about/how/elections-and-voting/constituencies/">UK
+                    Parliament website</a>.
+
+            </p>
         {% endif %}
         {% if parl_boundary_changes.CHANGE_TYPE ==  "NO_CHANGE" %}
-            <h2 class="ds-h4">Your constituency name is changing</h2>
-            <p>At the last parliamentary election, your constituency was called
-                <em>{{ parl_boundary_changes.current_constituencies_name }}</em>.
-                <p>At the next general election on the 4th of July, constituency boundary will remain the
-                    same, but the new name will be
-                    <em>{{ parl_boundary_changes.new_constituencies_name }}</em>.
-                </p>
+            <h2 class="ds-h4">Your constituency has not changed</h2>
+            <p>Your constituency is the same since the last parliamentary election.</p>
+            <p>
+                A new set of constituencies will be used for the 2024 UK general election. This is happening to take
+                account of changes in population, but not all constituencies are affected. Learn more about these
+                changes on the <a href="https://www.parliament.uk/about/how/elections-and-voting/constituencies/">UK
+                    Parliament website</a>.
+            </p>
         {% endif %}
-
 
     </div>
     {% if parl_boundary_changes.CHANGE_TYPE !=  "NO_CHANGE" %}
@@ -42,16 +59,23 @@
             .map-key {
                 margin: 0 1.95312rem;
             }
+
             .map-key span::before {
                 content: "";
-                display:inline-block;
-                height:1em;
+                display: inline-block;
+                height: 1em;
                 width: 1em;
-                border:1px solid black;
-                margin:0 0.1em 0 0.5em;
+                border: 1px solid black;
+                margin: 0 0.1em 0 0.5em;
             }
-            .key-grey::before {background-color: rgba(64, 63, 65, 0.5);}
-            .key-pink::before {background-color: rgba(230, 0, 124, 0.5);}
+
+            .key-grey::before {
+                background-color: rgba(64, 63, 65, 0.5);
+            }
+
+            .key-pink::before {
+                background-color: rgba(230, 0, 124, 0.5);
+            }
         </style>
         <p class="map-key">Key:
             <span class="key-grey">Previous constituency (grey)</span>
