Add map in the right place on ballot page, enable by default

--- a/wcivf/apps/elections/templates/elections/includes/_single_ballot.html
+++ b/wcivf/apps/elections/templates/elections/includes/_single_ballot.html
@@ -230,7 +230,9 @@
         {% if postelection.ballotnewsarticle_set.exists %}
             {% include "news_mentions/news_articles.html" with news_articles=postelection.ballotnewsarticle_set.all %}
         {% endif %}
-
+        {% if parl_boundary_changes and postelection.election.slug == "parl.2024-07-04" %}
+            {% include "elections/includes/parl_boundary_changes.html" %}
+        {% endif %}
         {% if postelection.wikipedia_bio %}
             <div class="ds-card">
                 <div class="ds-card-body">
